# mailing_go

./: .env.sample  .gitignore  auth_data.json  pyproject.toml
blog/: admin.py  models.py  urls.py
blog/migrations/: 0001_initial.py
client/: admin.py  models.py  services.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_client_owner.py
client/templates/client/: base.html  client_confirm_delete.html  client_detail.html  client_list.html  statistic.html
config/: settings.py  urls.py
mailing/: admin.py  cron.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: fill.py
mailing/migrations/: 0001_initial.py  0002_settings_message_remove_settings_client_attempt_and_more.py  0003_alter_attempt_status_alter_settings_frequency_and_more.py  0004_alter_attempt_status.py  0005_alter_settings_first_mailing_date.py  0006_alter_attempt_last_attempt_date.py  0007_alter_settings_frequency.py  0008_alter_attempt_last_attempt_date.py  0009_alter_settings_options.py  0010_settings_owner.py
mailing/templates/mailing/: settings_confirm_delete.html  settings_detail.html  settings_list.html
message/: admin.py  models.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_message_owner.py
message/templates/message/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: superuser.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options_alter_user_is_active.py
users/templates/users/: login.html  (+4 more)
(+2 files in other folders)
