[tool.poetry]
name = "mailing-go"
version = "0.1.0"
description = ""
authors = ["Tatiana Chepurnaya <tanyusha_tokor@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
