[tool.poetry]
name = "mailing-go"
version = "0.1.0"
description = ""
authors = ["Tatiana Chepurnaya <tanyusha_tokor@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
psycopg2-binary = "^2.9.9"
django-crontab = "^0.7.1"
django-crispy-forms = "^2.2"
crispy-bootstrap4 = "^2024.1"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
